--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # DataSource Configuration Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/up?useSSL=false&serverTimeZone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=sebas
-spring.datasource.password=valentina
+spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10542431
+spring.datasource.username=sql10542431
+spring.datasource.password=c4nhciqJBQ
 
 # Hibernate Configuration
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Hibernate SQL Logging
