--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DataSource Configuration Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/up?useSSL=false&serverTimeZone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=sebas
-spring.datasource.password=valentina
+spring.datasource.username=root
+spring.datasource.password=12345678
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
