--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DataSource Configuration Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/up?useSSL=false&serverTimeZone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=sebas
-spring.datasource.password=valentina
+spring.datasource.url=jdbc:mysql://localhost:3306/lc?useSSL=false&serverTimeZone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=12345678
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -10,3 +10,22 @@ spring.jpa.hibernate.ddl-auto=update
 # Hibernate SQL Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+# Error Stacktrace
+server.error.include-stacktrace=never
+server.error.include-message=always
+
+
+# swagger-ui custom path
+#springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=alpha
+# Swagger JSON format documentation path
+springdoc.api-docs.path=/api-docs
+
+management.security.enabled=false
+
+# Elements take their values from maven pom.xml build-related information
+documentation.application.description=@project.description@
+documentation.application.version=@project.version@
+
+spring.main.allow-circular-references = true
